# resume-tailor

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/workflow/: analyze.md  debug.md  handoff.md  implement-review.md  implement.md  plan.md  push.md  review-plan.md  ship.md  validate.md  write-plan.md
data/: README.md
docs/artifacts/: build-map.html  status.html
docs/handoffs/: HANDOFF-project-bootstrap.md  HANDOFF-stage2-screen-complete.md
docs/reference/: data-contracts.md  resume-tailor-analysis.html
docs/tasks/: PROGRESS.md
spike/: FINDINGS.md  greenhouse_spike.py
src/resume_tailor/: __init__.py  __main__.py  cli.py  contracts.py  evaluator.py  llm.py  prefilter.py  render.py  review.py  validation.py
src/resume_tailor/config/: rubric.yaml  search_profile.yaml
src/resume_tailor/connectors/: greenhouse.py
src/resume_tailor/store/: db.py  files.py  schema.sql
tests/: test_contracts.py  test_evaluator.py  test_greenhouse.py  test_llm.py  test_prefilter.py  test_render.py  test_review.py  test_store.py  test_validation.py
