[project]
name = "resume-tailor"
version = "0.1.0"
description = "Resume tailoring + auto-apply POC: core library with a thin Typer CLI shell"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "anthropic>=0.30",
]

[project.optional-dependencies]
apply = ["playwright>=1.44"]
dev = ["pytest>=8.0"]

[project.scripts]
resume-tailor = "resume_tailor.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
resume_tailor = ["store/schema.sql", "config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
